--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     .historico-alteracoes label { color: #457; font-weight: 600; }
     .lista-venc { margin: 5px 0 0 0; padding: 0 0 0 8px; }
     .lista-venc li { margin-bottom: 2px; font-size: 1.02rem; }
-    .totalizador { font-weight: bold; color: #156b1c; margin-top: 8px; font-size: 1.09rem; }
+    .totalizador { font-weight: bold; margin-top: 8px; font-size: 1.09rem; color: #222; }
     .saldo-negativo { color: #b11c1c !important; }
     .pag-dia-box { background: #f8f9ff; border-radius: 7px; padding: 9px 14px 5px 14px; }
     .btn-pag-dia { background: #21a65b; color: #fff; font-weight: bold; border: none; border-radius: 5px; font-size: 1.04rem; padding: 6px 19px; margin: 11px 0 12px 0; float: right; cursor: pointer; box-shadow: 0 2px 12px #21a65b28; }
@@ -158,14 +158,14 @@
 
   <script src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
   <script>
-    let dadosOriginaisGlobal = []; // Para busca geral
-    let pagamentosSelecionados = {}; // id da linha (rowIndex) => true
+    let dadosOriginaisGlobal = [];
+    let pagamentosSelecionados = {};
 
     function formatarData(data) {
       if (!data) return "-";
       let d = data;
       if (typeof data === "string") {
-        if (data.includes(" ")) d = data.split(" ")[0];
+        if (data.includes(" ")) d = d.split(" ")[0];
         if (d.match(/^\d{4}-\d{2}-\d{2}$/)) d = d + "T00:00:00";
       }
       d = new Date(d);
@@ -324,7 +324,6 @@
         resizable: false,
         cssClass: "col-pagdia",
         formatter: function(cell) {
-          // Somente para linhas normais (não totais)
           const rowData = cell.getRow().getData();
           if (rowData["__isTotal"]) return "";
           const rowId = cell.getRow().getPosition();
@@ -335,7 +334,6 @@
           const rowId = cell.getRow().getPosition();
           const rowData = cell.getRow().getData();
           if (rowData["__isTotal"]) return;
-          // Toggle
           pagamentosSelecionados[rowId] = !pagamentosSelecionados[rowId];
           atualizarCheckboxes();
           atualizarBotaoPagDia();
@@ -382,9 +380,32 @@
       return baseCols;
     }
 
+    function marcarPagamentosDoDia(rows, colunasVisiveis) {
+      pagamentosSelecionados = {};
+      // Pega colunas de datas que estão visíveis (coluna chave: dia/mês)
+      const colDatas = colunasVisiveis.filter(col => /^\d{2}\/\d{2}/.test(col));
+      const hoje = new Date();
+      hoje.setHours(0,0,0,0);
+      rows.forEach((row, idx) => {
+        // Se a linha não é de totais e alguma coluna data == hoje e valor > 0, marca como selecionada
+        if (row["__isTotal"]) return;
+        for (const col of colDatas) {
+          if (valorNumerico(row[col]) > 0) {
+            const [dia, mes] = col.split("/");
+            if (
+              parseInt(dia) === hoje.getDate() &&
+              parseInt(mes) === hoje.getMonth() + 1
+            ) {
+              pagamentosSelecionados[idx] = true;
+              return; // Já marcou, não precisa checar outras datas
+            }
+          }
+        }
+      });
+    }
+
     function drawTable(dadosOriginais) {
       dadosOriginaisGlobal = dadosOriginais || [];
-      pagamentosSelecionados = {}; // Reseta seleção a cada redraw
       if (window.table) {
         window.table.destroy();
         window.table = null;
@@ -416,28 +437,7 @@
 
       dados = dados.filter(row => isLinhaComValor(row, colunasVisiveis, colunasChave));
 
-      // Pré-seleciona os pagamentos com vencimento programado hoje
-      const hoje = new Date();
-      hoje.setHours(0,0,0,0);
-      dados.forEach((row, idx) => {
-        if (row["VENCIDO"] > 0) {
-          // Vencidos não são pagos "hoje" por padrão
-          return;
-        }
-        // Para títulos a vencer, verifica se alguma coluna de data tem valor e é hoje
-        for (const col of colunasVisiveis) {
-          if (col.match(/^\d{2}\/\d{2}/) && valorNumerico(row[col]) > 0) {
-            // Só marca se data igual hoje
-            const [dia, mes] = col.split("/");
-            if (
-              parseInt(dia) === hoje.getDate() &&
-              parseInt(mes) === hoje.getMonth() + 1
-            ) {
-              pagamentosSelecionados[idx] = true;
-            }
-          }
-        }
-      });
+      marcarPagamentosDoDia(dados, colunasVisiveis);
 
       const linhaTotais = calcularLinhaTotais(dados, colunasVisiveis);
       dados.unshift(linhaTotais);
@@ -480,9 +480,7 @@
       });
     }
 
-    // Checkbox e botão pagamentos do dia
     function atualizarCheckboxes() {
-      // Atualiza estado visual dos checkboxes
       document.querySelectorAll(".checkbox-pagamento").forEach(cb => {
         const idx = cb.getAttribute("data-rowid");
         cb.checked = !!pagamentosSelecionados[idx];
@@ -490,13 +488,17 @@
     }
     function atualizarBotaoPagDia() {
       const btn = document.getElementById("btnConfirmarPagDia");
-      const count = Object.values(pagamentosSelecionados).filter(Boolean).length;
-      btn.style.display = count > 0 ? "inline-block" : "none";
+      const table = window.table;
+      if (!table) return btn.style.display = "none";
+      const allRows = table.getRows().filter(r => !r.getData()["__isTotal"]);
+      let algumMarcado = false;
+      allRows.forEach((row, idx) => {
+        if (pagamentosSelecionados[idx]) algumMarcado = true;
+      });
+      btn.style.display = algumMarcado ? "inline-block" : "none";
     }
 
-    // Modal pagamentos do dia
     function atualizarPagamentosDiaModal() {
-      // Busca os dados selecionados
       const table = window.table;
       if (!table) return;
       const allRows = table.getRows().filter(r => !r.getData()["__isTotal"]);
@@ -506,8 +508,6 @@
           selecionados.push(row.getData());
         }
       });
-
-      // Agrupa por classificação
       const grupos = {};
       let total = 0;
       selecionados.forEach(row => {
@@ -515,11 +515,8 @@
         grupos[classif] = grupos[classif] || [];
         grupos[classif].push(row);
         total += valorNumerico(row["VENCIDO"]);
-        // Para títulos do dia (não vencidos), pode somar os valores das colunas do dia, mas para BI geralmente só soma VENCIDO
-        // Se quiser somar títulos do dia, adaptar aqui
       });
 
-      // Monta HTML do grupo/lista
       let html = `<div class="pag-dia-lista">`;
       Object.keys(grupos).forEach(classif => {
         html += `<div class="grupo">${classif}</div><ul>`;
@@ -535,13 +532,11 @@
       document.getElementById("totalPagamentosDia").innerHTML =
         "Total dos pagamentos: " + moedaBRLSemCentavos(total);
 
-      // Atualiza saldo após pagamentos
       atualizarSaldoPosPag();
     }
 
     function atualizarSaldoPosPag() {
       const saldoConta = Number(document.getElementById("saldoConta").value) || 0;
-      // Soma os pagamentos selecionados
       const table = window.table;
       if (!table) return;
       const allRows = table.getRows().filter(r => !r.getData()["__isTotal"]);
@@ -559,7 +554,6 @@
           : moedaBRLSemCentavos(saldoPos));
     }
 
-    // Busca por nome de fornecedor/cliente
     function filtrarPorNome() {
       let termo = document.getElementById("searchBar").value.trim().toLowerCase();
       if (!window.table) return;
